Fixed build issue