@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.townyadvanced</groupId>
   <artifactId>TownyResources</artifactId>
-  <version>0.13.0</version>
+  <version>0.13.1</version>
   <name>townyresources</name> <!-- Leave lower-cased -->
 
   <properties>
@@ -47,6 +47,10 @@
   
   <dependencies>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.14.0</version>    </dependency>
+    <dependency>
       <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
       <version>1.21.8-R0.1-SNAPSHOT</version>
@@ -57,12 +61,6 @@
       <artifactId>towny</artifactId>
       <version>${towny.version}</version>
       <scope>provided</scope>
-	</dependency>
-    <dependency>
-	  <groupId>com.github.TownyAdvanced</groupId>
-	  <artifactId>SiegeWar</artifactId>
-	  <version>2.8.1</version>
-	  <scope>provided</scope>
 	</dependency>
     <dependency>
       <groupId>com.meowj</groupId>
@@ -158,6 +156,18 @@
       <artifactId>maptowny-api</artifactId>
       <version>2.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.TownyAdvanced</groupId>
+      <artifactId>SiegeWar</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>us.dynmap</groupId>
+          <artifactId>dynmap-api</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 
   <build>
@@ -165,9 +175,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.13.0</version>
+        <version>3.8.0</version>
         <configuration>
-          <release>${java.version}</release>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
     </plugins>
@@ -177,30 +188,6 @@
         <filtering>true</filtering>
       </resource>
     </resources>
-  </build>
+</build>
 
-  <profiles>
-    <profile>
-      <id>intellij-idea-only</id>
-      <activation>
-        <property>
-          <name>idea.maven.embedder.version</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <release>${java.version}</release>
-              <compilerArgs>
-                <arg>--enable-preview</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
